fix(Header, Footer): use correct logo in dark mode

--- a/@udir-design/react/src/components/header/header.css
+++ b/@udir-design/react/src/components/header/header.css
@@ -36,6 +36,13 @@
       height: var(--ds-size-12);
     }
 
+    > img:first-of-type {
+      display: block;
+    }
+    > img:last-of-type {
+      display: none;
+    }
+
     @composes ds-focus from '@digdir/designsystemet-css/base.css';
   }
 
@@ -80,19 +87,19 @@
   }
 
   .uds-header__menu-button {
-    > svg:first-child {
+    > svg:first-of-type {
       display: block;
     }
 
-    > svg:nth-child(2) {
+    > svg:last-of-type {
       display: none;
     }
 
     &:has(+ [popover]:popover-open) {
-      > svg:first-child {
+      > svg:first-of-type {
         display: none;
       }
-      > svg:nth-child(2) {
+      > svg:last-of-type {
         display: block;
       }
     }
@@ -338,4 +345,24 @@
 /* Prevent body from scrolling when menu is open */
 body:has(.uds-header .uds-header__menu:popover-open) {
   overflow: hidden;
+}
+
+[data-color-scheme='dark'] .uds-header__logo {
+  > img:first-of-type {
+    display: none;
+  }
+  > img:last-of-type {
+    display: block;
+  }
+}
+
+[data-color-scheme='auto'] {
+  @media (prefers-color-scheme: dark) {
+    .uds-header__logo > img:first-of-type {
+      display: none;
+    }
+    .uds-header__logo > img:last-of-type {
+      display: block;
+    }
+  }
 }
